--- a/templates/faq.html
+++ b/templates/faq.html
@@ -67,36 +67,50 @@
         </nav>
       </div>
       <div class="container">
-	<div id="sub-header">
-          <h1>Welcome! Have some questions?</h1>
-             <p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
+	<!--------PAGE HEADER------->
+        <div id="sub-header">
+          <h1 class="white">Welcome! Have some questions?</h1>
+             <p class="white">Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
 	      </div>
-	      
-        <h3>Do I have to create an account?</h3>
-          <p> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
 
-        <h3>Can I save my favorite recipes?</h3>
-              <p> Yes, if you want to save your favorite recipes you need to create an account.</p>
+        <!--------PAGE BODY------->
+	      <div id="body-div">
+          <h3>Do I have to create an account?</h3>
+            <p> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
 
-        <h3>How can I save a recipe? </h3>
-          <p>Simply click on the save button. Next time you log in you will be able to access all the recipes.</p>
+          <h3>Can I save my favorite recipes?</h3>
+                <p> Yes, if you want to save your favorite recipes you need to create an account.</p>
 
-        <h3> Can I add my own recipes? </h3>
-          <p> Yes, only users who have an account can add their own recipes. </p>
+          <h3>How can I save a recipe? </h3>
+            <p>Simply click on the save button. Next time you log in you will be able to access all the recipes.</p>
+
+          <h3> Can I add my own recipes? </h3>
+            <p> Yes, only users who have an account can add their own recipes. </p>
 
           <h3> Can I organize my saved recipes by category? </h3>
-          <p> No, all your saved recipes will displayed in a single list </p>
+            <p> No, all your saved recipes will displayed in a single list </p>
 
           <h3> Can I search recipes by name? (ex: lasagna, chicken, ) </h3>
-           <p> Yes, if you choose to search by name you will get multiple results that match your request.</p>
-        <h1 class= "underline bold">Contact us:</h1>
-        <ul>
-          <li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
-          <li><b>Andrew Marmolejo:</b> amarmolejo@csumb.edu</li>
-          <li><b>Guadalupe Cisneros:</b> gcisneros@csumb.edu</li>
-          <li><b>Magnus Harboe:</b> mharboe@csumb.edu</li>
-        </ul>
+             <p> Yes, if you choose to search by name you will get multiple results that match your request.</p>
+        </div>
+
+        <!--------"FOOTER"------->
+        <div>
+          <!--------"FOOTER" CONTENT------->
+          <div class="contact-body">
+            <h1 class="underline bold">Contact us:</h1>
+            <ul>
+              <li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
+              <li><b>Andrew Marmolejo:</b> amarmolejo@csumb.edu</li>
+              <li><b>Guadalupe Cisneros:</b> gcisneros@csumb.edu</li>
+              <li><b>Magnus Harboe:</b> mharboe@csumb.edu</li>
+            </ul>
+          </div>
       </div>
+
+      </div>
+      <!--------END OF PAGE CONTENT------->
+      
     </section>
   </body>
 </html>
