--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,6 @@
+/*---------------------------*/
 /*------------Global---------*/
+/*---------------------------*/
 body
 {
     margin:0;
@@ -109,7 +111,9 @@ header
    color: #fff !important;
 }
 
+/*----------------*/
 /*-----NAVBAR-----*/
+/*----------------*/
 .nav-bar
 {
    top: 0 ;
