--- a/templates/recipes_info.html
+++ b/templates/recipes_info.html
@@ -17,7 +17,6 @@
       <!--Navigation bar-->
       <div class="nav-bar">
         <nav class="navbar navbar-expand-lg">
-          <!-----MANGLER LOGO--->
           <a class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
@@ -25,19 +24,22 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-              <a class="nav-link" href="/">HOME </a>
+                <a class="nav-link" href="/">HOME </a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/recipes/2/2">SEARCH</a>
+                <a class="nav-link" href="/search">SEARCH</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/add">ADD</a>
+                  <a class="nav-link" href="/login">ACCOUNT</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/faq">FAQ</a>
+                <a class="nav-link" href="/addrecipe">ADD</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/contact">CONTACT</a>
+                <a class="nav-link" href="/faq">FAQ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact">CONTACT</a>
               </li>
             </ul>
           </div>
