--- a/templates/recipes_info.html
+++ b/templates/recipes_info.html
@@ -1,4 +1,16 @@
-<!-- repies_info.html -->
+<!--
+   File Name: repies_info.html   
+   Template File:   This page will display the 
+                    instructions for the recipe 
+                    that the user has picked. 
+                                                                                              
+   Authors: Andrew Marmolejo
+            Athena Enosara
+            Magnus Harboe
+            Guadalupe Cisneros
+   Date: May 13th, 2019                                                                 
+   Course: CST 205    
+-->
 <!DOCTYPE html>
 <html>
   <head>
