--- a/templates/faq.html
+++ b/templates/faq.html
@@ -14,13 +14,12 @@
    Course: CST 205    
 
 -->
-{% block title %}
-  Hungy - FAQ + Contact
-{% endblock %}
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
+    <title>FAQ</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -34,7 +33,6 @@
       <!--Navigation bar-->
       <div class="nav-bar">
         <nav class="navbar navbar-expand-lg">
-          <!-----MANGLER LOGO--->
           <a class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
