--- a/templates/yourrecipes.html
+++ b/templates/yourrecipes.html
@@ -13,15 +13,11 @@
    Course: CST 205    
 
 -->
-
-{% block title %}
-  Hungy - Your Recipes
-{% endblock %}
-
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
+        <title>Your recipes</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
