--- a/templates/search.html
+++ b/templates/search.html
@@ -63,6 +63,9 @@
               	</nav>
           	</div>
       	</section>
+	<div style='width: 25%; margin-left:50px;'>
+		<h1>Search Page!</h1>
+        </div>
 	<center>
 		<div class="search">
 			<!-- INPUT FOR SEARCH API -->
