--- a/templates/search.html
+++ b/templates/search.html
@@ -65,6 +65,7 @@
       	</section>
 	<div style='width: 25%; margin-left:50px;'>
 		<h1>Search Page!</h1>
+		<p>The way you can search is very simple. Enter the ingredients you have (no commas), and choose a search method.</p>
         </div>
 	<center>
 		<div class="search">
