--- a/templates/search.html
+++ b/templates/search.html
@@ -66,7 +66,9 @@
 	<div style='width: 25%; margin-left:50px;'>
 		<h1>Search Page!</h1>
 		<p>The way you can search is very simple. Enter the ingredients you have (no commas), and choose a search method.</p>
-        </div>
+        	<p><b>Method #1</b> returns search results for recipes that include the ingredients you have with ingredients you might need.<br/>
+		<b>Method #2</b> returns search results for recipes you can make with only the ingredients you have.</p>
+	</div>
 	<center>
 		<div class="search">
 			<!-- INPUT FOR SEARCH API -->
