--- a/templates/login.html
+++ b/templates/login.html
@@ -61,6 +61,9 @@
 			</div>
             	</nav>
 		</div>
+		<div style='width: 25%; margin-left:50px;'>
+	        	<h1>Login Page!</h1>
+        	</div>
 		<center>
 			<div class="login">
 				<!-- INPUT TO LOGIN -->
