--- a/templates/login.html
+++ b/templates/login.html
@@ -63,6 +63,7 @@
 		</div>
 		<div style='width: 25%; margin-left:50px;'>
 	        	<h1>Login Page!</h1>
+			<p>Enter your information to log in or create an account. </p>
         	</div>
 		<center>
 			<div class="login">
