--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -66,7 +66,11 @@
 					<h3>Your Account Was Created!</h3>
 					<p>Add A Recipe</p>
 				{% endif %}
+				<div style='width: 25%; margin-left:50px;'>
 			</center>
+	        	<div style='width: 25%; margin-left:50px;'>
+	        		<h1>Add Recipe Page!</h1>
+        		</div>
 			<div class='container'>
 				<center>
 					<!-- INPUT TO ADD RECIPE -->
