--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -70,6 +70,7 @@
 			</center>
 	        	<div style='width: 25%; margin-left:50px;'>
 	        		<h1>Add Recipe Page!</h1>
+				<p>Enter your username, password, and information for a recipe you want to add to save on your account. </p>
         		</div>
 			<div class='container'>
 				<center>
