--- a/templates/faq.html
+++ b/templates/faq.html
@@ -66,31 +66,33 @@
         <!--------PAGE BODY------->
         <div id="body-div">
 
-	<!--------PAGE HEADER------->
+				<!--------PAGE HEADER------->
         <div id="sub-header">
-          <h1 class="white">Welcome! Have some questions?</h1>
-             <p class="white">Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
-	      </div>
+					<div class="subhead-move">
+						<h1 class="white">Welcome! Have some questions?</h1>
+						<p class="white">Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
+					</div>
+				</div>
 
         <!--------PAGE BODY------->
-	<div id="body-div">
-		  <h3>Do I have to create an account?</h3>
-		    <p> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
+				<div id="body-div">
+					<h3>Do I have to create an account?</h3>
+						<p> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
 
-		  <h3>Can I save my favorite recipes?</h3>
-			<p> Yes, if you want to save your favorite recipes you need to create an account.</p>
+					<h3>Can I save my favorite recipes?</h3>
+					<p> Yes, if you want to save your favorite recipes you need to create an account.</p>
 
-		  <h3>How can I save a recipe? </h3>
-		    <p>Simply click on the save button. Next time you log in you will be able to access all the recipes.</p>
+					<h3>How can I save a recipe? </h3>
+						<p>Simply click on the save button. Next time you log in you will be able to access all the recipes.</p>
 
-		  <h3> Can I add my own recipes? </h3>
-		    <p> Yes, only users who have an account can add their own recipes. </p>
+					<h3> Can I add my own recipes? </h3>
+						<p> Yes, only users who have an account can add their own recipes. </p>
 
-		  <h3> Can I organize my saved recipes by category? </h3>
-		    <p> No, all your saved recipes will displayed in a single list </p>
+					<h3> Can I organize my saved recipes by category? </h3>
+						<p> No, all your saved recipes will displayed in a single list </p>
 
-		  <h3> Can I search recipes by name? (ex: lasagna, chicken, ) </h3>
-		     <p> Yes, if you choose to search by name you will get multiple results that match your request.</p>
+					<h3> Can I search recipes by name? (ex: lasagna, chicken, ) </h3>
+						 <p> Yes, if you choose to search by name you will get multiple results that match your request.</p>
         </div>
 
         <!--------"FOOTER"------->
@@ -106,7 +108,8 @@
             </ul>
           </div>
       </div>
-
+			<!---- END OF "FOOTER"----->
+					
       </div>
       <!--------END OF PAGE CONTENT------->
       
