--- a/templates/faq.html
+++ b/templates/faq.html
@@ -63,10 +63,10 @@
       </div>
       <div class="container">
 
-				<!--------PAGE BODY------->
+				<!--PAGE BODY-->
 				<div id="body-div">
 
-				<!--------PAGE HEADER------->
+				<!--PAGE HEADER-->
 				<div id="sub-header">
 					<div class="subhead-move">
 						<h1 class="white">Welcome! Have some questions?</h1>
@@ -74,30 +74,30 @@
 					</div>
 				</div>
 
-        <!--------PAGE BODY------->
+        <!--PAGE BODY-->
 				<div id="body-div">
-					<h3>Do I have to create an account?</h3>
-						<p> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
+					<h2>Do I have to create an account?</h2>
+						<p class="small-text"> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
 
-					<h3>Can I save my favorite recipes?</h3>
-						<p> Yes, if you want to save your favorite recipes you need to create an account.</p>
+					<h2>Can I save my favorite recipes?</h2>
+						<p class="small-text"> Yes, if you want to save your favorite recipes you need to create an account.</p>
 
-					<h3>How can I save a recipe? </h3>
-						<p>Simply click on the save button. Next time you log in you will be able to access all the recipes.</p>
+					<h2>How can I save a recipe? </h2>
+						<p class="small-text">Simply click on the save button. Next time you log in you will be able to access all the recipes.</p>
 
-					<h3> Can I add my own recipes? </h3>
-						<p> Yes, only users who have an account can add their own recipes. </p>
+					<h2> Can I add my own recipes? </h2>
+						<p class="small-text"> Yes, only users who have an account can add their own recipes. </p>
 
-					<h3> Can I organize my saved recipes by category? </h3>
-						<p> No, all your saved recipes will displayed in a single list </p>
+					<h2> Can I organize my saved recipes by category? </h2>
+						<p class="small-text"> No, all your saved recipes will displayed in a single list </p>
 
-					<h3> Can I search recipes by name? (ex: lasagna, chicken, ) </h3>
-						<p> Yes, if you choose to search by name you will get multiple results that match your request.</p>
+					<h2> Can I search recipes by name? (ex: lasagna, chicken, ) </h2>
+						<p class="small-text"> Yes, if you choose to search by name you will get multiple results that match your request.</p>
         </div>
 
-				<!--------"FOOTER"------->
+				<!--"FOOTER"-->
 				<div>
-					<!--------"FOOTER" CONTENT------->
+					<!--"FOOTER" CONTENT-->
 					<div class="contact-body">
 						<h1 class="underline bold">Contact us:</h1>
 						<ul>
@@ -108,10 +108,10 @@
 						</ul>
 					</div>
 				</div>
-				<!---- END OF "FOOTER"----->
+				<!-- END OF "FOOTER"-->
 					
 			</div>
-			<!--------END OF PAGE CONTENT------->
+			<!--END OF PAGE CONTENT-->
 
 		</section>
 	</body>
