--- a/templates/faq.html
+++ b/templates/faq.html
@@ -28,9 +28,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
-  <body class = "hungy-sub">
+  <body>
     <section>
-      <!--Navigation bar-->
+      <!--NAVIGATION BAR-->
       <div class="nav-bar">
         <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand" href="#"></a>
@@ -61,11 +61,11 @@
           </div>
         </nav>
       </div>
+			<!-- END OF NAVIGATION BAR -->
+			
+			<!-- PAGE CONTENT -->
       <div class="container">
-
-				<!--PAGE BODY-->
-				<div id="body-div">
-
+				
 				<!--PAGE HEADER-->
 				<div id="sub-header">
 					<div class="subhead-move">
@@ -73,8 +73,9 @@
 							<p class="white">Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
 					</div>
 				</div>
+				<!-- END OF PAGE HEADER -->
 
-        <!--PAGE BODY-->
+        <!-- PAGE BODY -->
 				<div id="body-div">
 					<h2>Do I have to create an account?</h2>
 						<p class="small-text"> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
@@ -94,6 +95,7 @@
 					<h2> Can I search recipes by name? (ex: lasagna, chicken, ) </h2>
 						<p class="small-text"> Yes, if you choose to search by name you will get multiple results that match your request.</p>
         </div>
+				<!-- END OF PAGE BODY -->
 
 				<!--"FOOTER"-->
 				<div>
