--- a/templates/recipes_info.html
+++ b/templates/recipes_info.html
@@ -15,7 +15,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Reipe info</title>
+    <title>Recipe Info</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
