--- a/templates/faq.html
+++ b/templates/faq.html
@@ -64,19 +64,19 @@
 			<!-- END OF NAVIGATION BAR -->
 			
 			<!-- PAGE CONTENT -->
-      <div class="container">
+      <div class="container background-black">
 				
 				<!--PAGE HEADER-->
 				<div id="sub-header">
 					<div class="subhead-move">
-						<h1 class="white">Welcome! Have some questions?</h1>
-							<p class="white">Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
+						<h1>Welcome! Have some questions?</h1>
+							<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
 					</div>
 				</div>
 				<!-- END OF PAGE HEADER -->
 
         <!-- PAGE BODY -->
-				<div id="body-div">
+				<div>
 					<h2>Do I have to create an account?</h2>
 						<p class="small-text"> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
 
