--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,7 +40,7 @@ header
 
 #sub-header{
   height: 30vh;
-  background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(img/bread-color-copyspace-1565982.jpg);
+  background: url(img/bread-color-copyspace-1565982.jpg);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
