--- a/templates/faq.html
+++ b/templates/faq.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
-  <body>
+  <body claass="background-black">
     <section>
       <!--NAVIGATION BAR-->
       <div class="nav-bar">
@@ -64,7 +64,7 @@
 			<!-- END OF NAVIGATION BAR -->
 			
 			<!-- PAGE CONTENT -->
-      <div class="container background-black">
+      <div class="container">
 				
 				<!--PAGE HEADER-->
 				<div id="sub-header">
