--- a/templates/faq.html
+++ b/templates/faq.html
@@ -64,7 +64,7 @@
 			<!-- END OF NAVIGATION BAR -->
 			
 			<!-- PAGE CONTENT -->
-      <div class="container">
+      <div class="container background-black">
 				
 				<!--PAGE HEADER-->
 				<div id="sub-header">
