--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,11 +47,11 @@ header
 }
 
 #body-div{
-/*   color: white;
+  color: white;
   position: absolute;
   text-align: center;
   font-family: sans-serif;
-  top-margin: 35vh; */
+  top-margin: 35vh;
 }
 
 #contact-foot{
