--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,7 +52,7 @@ header
 }
 
 .small-text{
-  font-size: 15px !important;
+  font-size: 20px !important;
 }
 
 .background-black{
@@ -105,6 +105,10 @@ header
 
 .white{
   color: white !important;
+}
+
+.font-black{
+  color: black !important;
 }
 
 /*----------------*/
