--- a/templates/faq.html
+++ b/templates/faq.html
@@ -64,7 +64,7 @@
 			<!-- END OF NAVIGATION BAR -->
 			
 			<!-- PAGE CONTENT -->
-      <div class="container background-black">
+      <div class="container black-font">
 				
 				<!--PAGE HEADER-->
 				<div id="sub-header">
@@ -78,7 +78,7 @@
         <!-- PAGE BODY -->
 				<div>
 					<h2>Do I have to create an account?</h2>
-						<p class="small-text"> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
+						<p> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
 
 					<h2>Can I save my favorite recipes?</h2>
 						<p class="small-text"> Yes, if you want to save your favorite recipes you need to create an account.</p>
@@ -100,7 +100,7 @@
 				<!--"FOOTER"-->
 				<div>
 					<!--"FOOTER" CONTENT-->
-					<div class="contact-body">
+					<div class="contact-body font-black">
 						<h1 class="underline bold">Contact us:</h1>
 						<ul>
 							<li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
