--- a/templates/faq.html
+++ b/templates/faq.html
@@ -98,9 +98,9 @@
 				<!-- END OF PAGE BODY -->
 
 				<!--"FOOTER"-->
-				<div>
+				<div class="background-black">
 					<!--"FOOTER" CONTENT-->
-					<div class="contact-body font-black">
+					<div class="contact-body">
 						<h1 class="underline bold">Contact us:</h1>
 						<ul>
 							<li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
