--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,6 @@ header
   background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(img/bread-color-copyspace-1565982.jpg);
   background-position: center;
   background-size: cover;
-  width: 75vh;
 }
 
 .welcome
@@ -35,6 +34,7 @@ header
 .subhead-move {
   top-margin: 10px;
   color: white;
+  width: 50px;
 }
 
 #body-div{
