--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,31 +1,29 @@
 /*---------------------------*/
 /*------------Global---------*/
 /*---------------------------*/
-body
-{
+body{
   margin:0;
   padding: 0;
   font-family: sans-serif;
 }
 
-header
-{
+.header{
   height: 100vh;
   background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(img/bread-color-copyspace-1565982.jpg);
   background-position: center;
   background-size: cover;
+  left-margin: -5px;
+  right-margin: -5px;
 }
 
-.welcome
-{
+.welcome{
   position: relative;
   text-align: center;
   font-family: sans-serif;
   top: 200px;
 }
 
-.welcome h1
-{
+.welcome h1{
   color: white;
   font-size: 54px;
   margin: 25px;
