--- a/templates/faq.html
+++ b/templates/faq.html
@@ -43,18 +43,23 @@
               <li class="nav-item">
                 <a class="nav-link" href="/">HOME </a>
               </li>
+							
               <li class="nav-item">
                 <a class="nav-link" href="/search">SEARCH</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/login">ACCOUNT</a>
-              </li>
-              <li class="nav-item">
+							
+							<li class="nav-item">
                 <a class="nav-link" href="/addrecipe">ADD</a>
               </li>
+							
+              <li class="nav-item">
+                <a class="nav-link" href="/login">ACCOUNT</a>
+							</li>
+							
               <li class="nav-item">
                 <a class="nav-link" href="/faq">FAQ</a>
               </li>
+							
               <li class="nav-item">
                 <a class="nav-link" href="/contact">CONTACT</a>
               </li>
@@ -69,7 +74,7 @@
 				
 				<!--PAGE HEADER-->
 				<div id="sub-header">
-					<div class="subhead-move">
+					<div class="subhead-move" size=60%>
 						<h1>Welcome! Have some questions?</h1>
 							<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
 					</div>
@@ -79,7 +84,7 @@
         <!-- PAGE BODY -->
 				<div>
 					<h2>Do I have to create an account?</h2>
-						<p> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
+						<p class="small-text"> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
 
 					<h2>Can I save my favorite recipes?</h2>
 						<p class="small-text"> Yes, if you want to save your favorite recipes you need to create an account.</p>
