--- a/templates/faq.html
+++ b/templates/faq.html
@@ -74,7 +74,7 @@
 				
 				<!--PAGE HEADER-->
 				<div id="sub-header">
-					<div class="subhead-move" size=60%>
+					<div class="subhead-move" width=60%>
 						<h1>Welcome! Have some questions?</h1>
 							<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
 					</div>
