--- a/templates/contact.html
+++ b/templates/contact.html
@@ -62,7 +62,7 @@
       </div>
       <div class="container welcome">
         <h1 class= "underline bold">Contact us:</h1>
-        <ul>
+        <ul style="list-style: none;">
           <li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
           <li><b>Andrew Marmolejo:</b> amarmolejo@csumb.edu</li>
           <li><b>Guadalupe Cisneros:</b> gcisneros@csumb.edu</li>
