--- a/templates/faq.html
+++ b/templates/faq.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
-  <body claass="background-black">
+  <body class="background-black">
     <section>
 			
       <!--NAVIGATION BAR-->
@@ -74,7 +74,7 @@
 				
 				<!--PAGE HEADER-->
 				<div id="sub-header">
-					<div class="subhead-move" width=60%>
+					<div class="subhead-move">
 						<h1>Welcome! Have some questions?</h1>
 							<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
 					</div>
