--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,11 +30,15 @@ body{
 }
 
 .subhead-move {
-  top-margin: 10px;
+  top-margin: 0;
   color: white;
   width: 50px;
   font-size: 30px;
   padding: 10px;
+}
+
+.subhead{
+  top-margin: 20px;
 }
 
 #body-div{
