--- a/templates/faq.html
+++ b/templates/faq.html
@@ -73,8 +73,8 @@
       <div class="container black-font">
 				
 				<!--PAGE HEADER-->
-				<div class="background-black">
-					<div class="subhead-move">
+				<div class="subhead-move">
+					<div class="subhead">
 						<h1>Welcome! Have some questions?</h1>
 							<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
 					</div>
