--- a/templates/search.html
+++ b/templates/search.html
@@ -66,8 +66,8 @@
 	<div style='width: 25%; margin-left:50px;'>
 		<h1>Search Page!</h1>
 		<p>The way you can search is very simple. Enter the ingredients you have (no commas), and choose a search method.</p>
-        	<p><b>Method #1</b> returns search results for recipes that include the ingredients you have with ingredients you might need.<br/>
-		<b>Method #2</b> returns search results for recipes you can make with only the ingredients you have.</p>
+        	<p><b>Method #1</b> returns search results for recipes that tries to use as many of the ingrediencies you have.<br/>
+		<b>Method #2</b> returns search results for recipes you can make with the ingrediencies you have and limits the amount of ingrediencies you don't have.</p>
 	</div>
 	<center>
 		<div class="search">
@@ -85,5 +85,5 @@
 			</form>
 		</div>
 	</center>
-  	</body>
+</body>
 </html>
