--- a/templates/faq.html
+++ b/templates/faq.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
-  <body class="background-black">
+  <body class="img-header">
     <section>
 			
       <!--NAVIGATION BAR-->
