--- a/templates/contact.html
+++ b/templates/contact.html
@@ -63,10 +63,10 @@
       <div class="container welcome">
         <h1 class= "underline bold">Contact us:</h1>
         <ul style="list-style: none;">
-          <li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
-          <li><b>Andrew Marmolejo:</b> amarmolejo@csumb.edu</li>
-          <li><b>Guadalupe Cisneros:</b> gcisneros@csumb.edu</li>
-          <li><b>Magnus Harboe:</b> mharboe@csumb.edu</li>
+          <li><b>Athena Enosara:</b> <i class="fa fa-envelope"></i> aenosara@csumb.edu</li>
+          <li><b>Andrew Marmolejo:</b> <i class="fa fa-envelope"></i> amarmolejo@csumb.edu</li>
+          <li><b>Guadalupe Cisneros:</b> <i class="fa fa-envelope"></i> gcisneros@csumb.edu</li>
+          <li><b>Magnus Harboe:</b> <i class="fa fa-envelope"></i> mharboe@csumb.edu</li>
         </ul>
       </div>
     </section>
