--- a/templates/faq.html
+++ b/templates/faq.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
-  <body class="img-header">
+  <body>
     <section>
 			
       <!--NAVIGATION BAR-->
@@ -70,7 +70,7 @@
 			<!-- END OF NAVIGATION BAR -->
 			
 			<!-- PAGE CONTENT -->
-      <div class="container black-font">
+      <div class="container black-font img-header">
 				
 				<!--PAGE HEADER-->
 				<div class="subhead-move">
