--- a/templates/faq.html
+++ b/templates/faq.html
@@ -70,11 +70,11 @@
 			<!-- END OF NAVIGATION BAR -->
 			
 			<!-- PAGE CONTENT -->
-      <div class="container black-font img-header">
+      <div class="container">
 				
 				<!--PAGE HEADER-->
-				<div class="subhead-move">
-					<div class="subhead">
+				<div>
+					<div>
 						<h1>Welcome! Have some questions?</h1>
 							<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
 					</div>
@@ -104,7 +104,7 @@
 				<!-- END OF PAGE BODY -->
 
 				<!--"FOOTER"-->
-				<div class="background-black">
+				<div class="top-border">
 					<!--"FOOTER" CONTENT-->
 					<div class="contact-body">
 						<h1 class="underline bold">Contact us:</h1>
