--- a/templates/faq.html
+++ b/templates/faq.html
@@ -73,7 +73,7 @@
       <div class="container">
 				
 				<!--PAGE HEADER-->
-				<div>
+				<div class="bottom-border">
 					<div>
 						<h1>Welcome! Have some questions?</h1>
 							<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
@@ -106,7 +106,7 @@
 				<!--"FOOTER"-->
 				<div class="top-border">
 					<!--"FOOTER" CONTENT-->
-					<div class="contact-body">
+					<div class="font-black">
 						<h1 class="underline bold">Contact us:</h1>
 						<ul>
 							<li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
