--- a/templates/search.html
+++ b/templates/search.html
@@ -63,11 +63,11 @@
               	</nav>
           	</div>
       	</section>
-	<div style='width: 25%; margin-left:50px;'>
+	<div style='width: 30%; margin-left:40px;'>
 		<h1>Search Page!</h1>
 		<p>The way you can search is very simple. Enter the ingredients you have (no commas), and choose a search method.</p>
         	<p><b>Method #1</b> returns search results for recipes that try to use as many of the ingrediencies you have.<br/>
-		<b>Method #2</b> returns search results for recipes you can make with the ingredients you have, and limits the amount of ingrediencies you don't have.</p>
+		<b>Method #2</b> returns search results for recipes you can make with the ingredients you have, while limiting the amount of ingredients you don't have.</p>
 	</div>
 	<center>
 		<div class="search">
